# llvm-project

clang/docs/: ClangFormattedStatus.rst
clang/docs/tools/: clang-formatted-files.txt
mlir/examples/toy/: CMakeLists.txt
mlir/examples/toy/Lab/: CMakeLists.txt
mlir/examples/toy/Lab/include/toy/: CMakeLists.txt  Ops.td  Parser.h
mlir/examples/toy/Lab/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py
mlir/test/Examples/Toy/Lab/: ast.toy  empty.toy  invalid.mlir  link_op.toy  lowering.toy  opt.toy  parser.toy
utils/bazel/llvm-project-overlay/mlir/examples/toy/Lab/: BUILD.bazel
